漫画の人物に変更

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<link rel="shortcut icon" href="../favicon.ico"> 
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<script src="js/modernizr.custom.63321.js"></script>
-		<!--[if lte IE 7]><style>.support-note .note-ie{display:block;}</style><![endif]-->
+		<!-- [if lte IE 7]><style>.support-note .note-ie{display:block;}</style><![endif] -->
 	</head>
 	<body>
 		<div class="container">	
 
 			<!-- Codrops top bar -->
-			<div class="codrops-top clearfix">
+			<!-- <div class="codrops-top clearfix">
 				<a href="http://tympanus.net/Tutorials/LoadingAnimations/">
 					<strong>&laquo; Previous Demo: </strong>Css Loading Animations
 				</a>
@@ -27,12 +27,12 @@
 						<strong>Back to the Codrops Article</strong>
 					</a>
 				</span>
-			</div><!--/ Codrops top bar -->
+			</div>/ Codrops top bar -->
 			
 			<header class="clearfix">
 			
-				<h1>Responsive CSS Timeline with 3D Effect <span>(Best viewed in WebKit browsers)</span></h1>
-				<h2>Star Wars vs. Spaceballs <span>The final battle</span></h2>
+				<h1>sample<span>sample</span></h1>
+				<h2>ux演習プロト</span></h2>
 				<div class="support-note">
 					<span class="note-ie">Sorry, only modern browsers.</span>
 				</div>
@@ -46,11 +46,11 @@
 					<li class="event">
 						<input type="radio" name="tl-group" checked/>
 						<label></label>
-						<div class="thumb user-4"><span>19 Nov</span></div>
+						<div class="thumb user-4"><span>ゆずは</span></div>
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
-									<h3>I find your lack of faith disturbing</h3>
+									<!-- <h3>I find your lack of faith disturbing</h3> -->
 									<p>Don't be too proud of this technological terror you've constructed. The ability to destroy a planet is insignificant next to the power of the Force. The plans you refer to will soon be back in our hands. A tremor in the Force. The last time I felt it was in the presence of my old master. Escape is not his plan. I must face him. Alone.</p>
 								</div>
 							</div>
@@ -60,7 +60,7 @@
 					<li class="event">
 						<input type="radio" name="tl-group"/>
 						<label></label>
-						<div class="thumb user-6"><span>18 Nov</span></div>
+						<div class="thumb user-6"><span>さいば</span></div>
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
@@ -74,7 +74,7 @@
 					<li class="event">
 						<input type="radio" name="tl-group"/>
 						<label></label>
-						<div class="thumb user-3"><span>17 Nov</span></div>
+						<div class="thumb user-3"><span>ハルト</span></div>
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
@@ -88,7 +88,7 @@
 					<li class="event">
 						<input type="radio" name="tl-group"/>
 						<label></label>
-						<div class="thumb user-5"><span>16 Nov</span></div>
+						<div class="thumb user-5"><span>リン</span></div>
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
@@ -102,7 +102,7 @@
 					<li class="event">
 						<input type="radio" name="tl-group"/>
 						<label></label>
-						<div class="thumb user-2"><span>15 Nov</span></div>
+						<div class="thumb user-2"><span>むつみ</span></div>
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
@@ -113,7 +113,7 @@
 						</div>
 					</li>
 
-					<li class="event">
+					<!-- <li class="event">
 						<input type="radio" name="tl-group"/>
 						<label></label>
 						<div class="thumb user-7"><span>14 Nov</span></div>
@@ -153,7 +153,7 @@
 								</div>
 							</div>
 						</div>
-					</li>
+					</li> -->
 					
 				</ul>
 			</section>
