--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			
 			<header class="clearfix">
 			
-				<h1>sample<span>sample</span></h1>
+				<!-- <h1>sample<span>sample</span></h1> -->
 				<h2>ux演習プロト</span></h2>
 				<div class="support-note">
 					<span class="note-ie">Sorry, only modern browsers.</span>
@@ -50,8 +50,8 @@
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
-									<!-- <h3>I find your lack of faith disturbing</h3> -->
-									<p>Don't be too proud of this technological terror you've constructed. The ability to destroy a planet is insignificant next to the power of the Force. The plans you refer to will soon be back in our hands. A tremor in the Force. The last time I felt it was in the presence of my old master. Escape is not his plan. I must face him. Alone.</p>
+									<h3>中間考査お疲れ様！！</h3>
+									<p>友達とカフェなう</p>
 								</div>
 							</div>
 						</div>
@@ -64,8 +64,8 @@
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
-									<h3>I ain't shooting this thing, I hate guns.</h3>
-									<p>Ha, didn't even stay for the wedding. Just took his million spacebucks and ran. And you will not call me 'you'. You will never address me as 'you'. You will call me 'your royal highness'. I really must go back. I shouldn't have run away. I realize now that love is one luxury a princess cannot afford. </p>
+									<h3>お疲れ！！</h3>
+									<p>しんどかった</p>
 								</div>
 							</div>
 						</div>
@@ -78,8 +78,8 @@
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
-									<h3>My brains are going into my feet! </h3>
-									<p>We're done with you. Go back to the golf course and work on your putz. Nah, he got the upside, I got the downside. See there's two sides to every Schwartz.  What's the matter with this thing, what's all that churnning and bubbling, you call that radar screen? Ah, planet Druidia. And under that air shield, ten thousand years of fresh air. We must get through that air shield! Say goodbye to your two best friends, and I don't mean your pals in the Winnebago. So, Lone Star, now you see that evil will always triumph because good is dumb. </p>
+									<h3>おつ！！</h3>
+									<p>疲れたーーーー</p>
 								</div>
 							</div>
 						</div>
@@ -92,8 +92,8 @@
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
-									<h3>Would you please stop calling me that?</h3>
-									<p>You make it so difficult sometimes. You have your moments. Not many of them, but you do have them. You're not actually going IN to an asteroid field? I happen to like nice men. This bucket of bolts's never gonna get us past that blockade. We're going to get pulverized if we stay out here much longer. Evacuate remaining ground staff.</p>
+									<h3>ご飯行きたい</h3>
+									<p>お疲れっす</p>
 								</div>
 							</div>
 						</div>
@@ -106,8 +106,8 @@
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
-									<h3>Funny, she doesn't look Druish</h3>
-									<p>It's not that we're afraid, far from it, it's just that we've got this thing about death... It's not us! I'm a mog: half man, half dog. I'm my own best friend! The minute we move in they're gonna spot us on their radar. Whoa, hold it, time. Chief... I can't... I can't go any further. I can't go any further. </p>
+									<h3>やっと終わった．．．</h3>
+									<p>疲れたぜ</p>
 								</div>
 							</div>
 						</div>
